--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,47 @@
+# Dependencies
 node_modules/
+
+# Expo
 .expo/
 dist/
+web-build/
+
+# Environment files (keep .env.example)
+.env
+.env.local
+.env.*.local
+
+# iOS
 *.jks
 *.p8
 *.p12
 *.mobileprovision
+ios/Pods/
+
+# Android
+*.keystore
+android/app/debug.keystore
+android/.gradle/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Testing
+coverage/
+
+# Build
+build/
+*.tsbuildinfo
+
+# Misc
+*.log
+.cache/
