--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.13.4",
     "expo": "~54.0.32",
     "expo-clipboard": "^8.0.8",
+    "expo-constants": "^18.0.13",
     "expo-image-picker": "^17.0.10",
     "expo-secure-store": "^15.0.8",
     "expo-sharing": "^14.0.8",
