--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react-native": "^5.0.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "metro-minify-terser": "^0.83.3",
     "prettier": "^3.8.1",
     "typescript": "~5.9.2"
   },
