--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "^4.20.0",
     "tailwindcss": "^3.4.19",
+    "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
