--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "expo-clipboard": "^8.0.8",
     "expo-constants": "^18.0.13",
     "expo-image-picker": "^17.0.10",
+    "expo-localization": "~17.0.8",
+    "expo-notifications": "~0.32.16",
     "expo-secure-store": "^15.0.8",
     "expo-sharing": "^14.0.8",
     "expo-status-bar": "~3.0.9",
