--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
     "axios": "^1.13.4",
+    "babel-preset-expo": "^54.0.10",
     "expo": "~54.0.32",
     "expo-clipboard": "^8.0.8",
     "expo-constants": "^18.0.13",
+    "expo-haptics": "~15.0.8",
     "expo-image-picker": "^17.0.10",
+    "expo-linear-gradient": "~15.0.8",
     "expo-localization": "~17.0.8",
     "expo-notifications": "~0.32.16",
     "expo-secure-store": "^15.0.8",
@@ -31,11 +34,13 @@
     "expo-status-bar": "~3.0.9",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-gesture-handler": "^2.30.0",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
-    "react-native-screens": "^4.20.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
     "tailwindcss": "^3.4.19",
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
