--- a/app.json
+++ b/app.json
@@ -1,30 +1,87 @@
 {
   "expo": {
-    "name": "flirtkey-app",
+    "name": "FlirtKey",
     "slug": "flirtkey-app",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
+    "scheme": "flirtkey",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#0a0a0a"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.flirtkey.app",
+      "infoPlist": {
+        "NSPhotoLibraryUsageDescription": "FlirtKey needs access to your photos to analyze chat screenshots",
+        "NSCameraUsageDescription": "FlirtKey needs camera access to capture screenshots for analysis",
+        "CFBundleURLTypes": [
+          {
+            "CFBundleURLSchemes": ["flirtkey"]
+          }
+        ],
+        "LSApplicationQueriesSchemes": ["flirtkey"]
+      }
     },
     "android": {
+      "package": "com.flirtkey.app",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#0a0a0a"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "intentFilters": [
+        {
+          "action": "VIEW",
+          "autoVerify": true,
+          "data": [
+            {
+              "scheme": "flirtkey"
+            }
+          ],
+          "category": ["DEFAULT", "BROWSABLE"]
+        },
+        {
+          "action": "SEND",
+          "category": ["DEFAULT"],
+          "data": [
+            {
+              "mimeType": "image/*"
+            }
+          ]
+        },
+        {
+          "action": "SEND_MULTIPLE",
+          "category": ["DEFAULT"],
+          "data": [
+            {
+              "mimeType": "image/*"
+            }
+          ]
+        }
+      ],
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.READ_EXTERNAL_STORAGE",
+        "android.permission.WRITE_EXTERNAL_STORAGE"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "FlirtKey needs access to your photos to analyze chat screenshots",
+          "cameraPermission": "FlirtKey needs camera access to capture screenshots for analysis"
+        }
+      ]
+    ]
   }
 }
