--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
@@ -24,7 +28,9 @@
     "expo": "~54.0.32",
     "expo-clipboard": "^8.0.8",
     "expo-constants": "^18.0.13",
+    "expo-file-system": "~19.0.9",
     "expo-haptics": "~15.0.8",
+    "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "^17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-localization": "~17.0.8",
@@ -40,6 +46,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.6.2",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.8.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.5.1",
     "react-native-worklets-core": "^1.6.2",
@@ -48,7 +55,11 @@
     "zustand": "^5.0.10"
   },
   "devDependencies": {
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/jest": "^30.0.0",
     "@types/react": "~19.1.0",
+    "@types/react-test-renderer": "^19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.54.0",
     "@typescript-eslint/parser": "^8.54.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -59,9 +70,13 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-native": "^5.0.0",
     "husky": "^9.1.7",
+    "jest": "^30.2.0",
+    "jest-expo": "^54.0.16",
     "lint-staged": "^16.2.7",
     "metro-minify-terser": "^0.83.3",
     "prettier": "^3.8.1",
+    "react-test-renderer": "^19.1.0",
+    "ts-jest": "^29.4.6",
     "typescript": "~5.9.2"
   },
   "private": true,
