--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.4.1",
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-navigation/bottom-tabs": "^7.10.1",
@@ -29,6 +30,7 @@
     "expo-clipboard": "^8.0.8",
     "expo-constants": "^18.0.13",
     "expo-file-system": "~19.0.9",
+    "expo-font": "^14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "^17.0.10",
