--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo": "~54.0.32",
     "expo-clipboard": "^8.0.8",
     "expo-constants": "^18.0.13",
+    "expo-crypto": "~15.0.8",
     "expo-file-system": "~19.0.9",
     "expo-font": "^14.0.11",
     "expo-haptics": "~15.0.8",
